[package]
name = "ye"
version = "0.0.8"
authors = ["evan GmbH"]
edition = "2018"
license = "Apache-2.0"
description = "YE VC and DID engine"
homepage = "https://github.com/yuulive/ye"
documentation = "https://docs.rs/crate/ye"
repository = "https://github.com/yuulive/ye"
readme = "README.md"
keywords = ["did", "ssi", "vc"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.31"
env_logger = "0.7.1"
futures = "0.3.5"
log = "0.4.8"

[dev-dependencies]
tokio = { version = "0.2.21", features = ["macros", "rt-threaded"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
